--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@splidejs/splide": "^4.1.4",
+    "jquery": "^3.7.1",
+    "ngx-slick-carousel": "^17.0.0",
     "ngx-slider-v2": "^17.0.0",
+    "ngx-splide": "^7.0.1",
     "rxjs": "~7.8.0",
-    "swiper": "^11.1.14",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
