--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@splidejs/splide": "^4.1.4",
+    "d3": "^7.9.0",
+    "d3-tile": "^1.0.0",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "ngx-slick-carousel": "^17.0.0",
     "ngx-slider-v2": "^17.0.0",
     "ngx-splide": "^7.0.1",
@@ -36,7 +39,9 @@
     "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.14",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
