feat(coverage): migrate from leaflet to mapbox-gl for coverage map
- Replace leaflet with mapbox-gl for improved performance and features
- Add map style selector and center button for better UX
- Implement environment configuration for mapbox token
- Update tests and dependencies accordingly
- Add script to generate env.js from MAPBOX_TOKEN

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "gen:env": "node scripts/generate-env.js",
+    "prestart": "npm run gen:env",
+    "prebuild": "npm run gen:env",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -25,7 +28,7 @@
     "d3": "^7.9.0",
     "d3-tile": "^1.0.0",
     "jquery": "^3.7.1",
-    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.15.0",
     "ngx-slick-carousel": "^17.0.0",
     "ngx-slider-v2": "^17.0.0",
     "ngx-splide": "^7.0.1",
@@ -41,7 +44,9 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
-    "@types/leaflet": "^1.9.14",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/node": "^24.5.0",
+    "dotenv": "^17.2.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
